--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,21 @@
 Package: HW04Jh5764a
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Dataframe Manipulation and Visualization
+Version: 0.0.0.9000
+Author: Jed Hammoud
+Maintainer: <jh5764a@student.american.edu>
+Description: This package contains two functions. One where you can enter a data frame and get different results and one where you can enter a data frame and get differnet plots
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.1
+License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+Suggests: 
+    spelling
+Language: en-US
+Imports: 
+    dplyr,
+    ggplot2,
+    magrittr,
+    tibble,
+    tidyr,
+    tidyselect
