Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,5 @@ Imports:
     tibble,
     tidyr,
     tidyselect
+URL: https://github.com/jh5764a/HW04Jh5764a
+BugReports: https://github.com/jh5764a/HW04Jh5764a/issues
